[package]
name = "samples"
version = "0.1.0"
edition = "2021"
authors = ["Heath Stewart (https://github.com/heaths)"]
description = "Demonstration of tests and examples in Rust"
license = "MIT"
homepage = "https://github.com/heaths/samples-rs"
repository = "https://github.com/heaths/samples-rs"
publish = false
exclude = [
    "docs/",
    "src/docs/",
    "tests/",
    ".*",
]

[dev-dependencies]
clap = { version = "3.2.23", features = ["cargo", "derive"] }

[[example]]
name = "client"
crate-type = ["lib"]
